// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render as default 1`] = `
.emotion-0 {
  display: inline-block;
  border-color: rgb(224, 224, 224);
  background-color: rgb(255, 255, 255);
  color: rgb(1, 1, 1);
  border-top-width: 2px;
  border-top-style: solid;
  border-right-width: 2px;
  border-right-style: solid;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-left-width: 2px;
  border-left-style: solid;
  cursor: pointer;
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
  padding-left: 16px;
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  font-family: Helvetica,sans-serif;
  font-kerning: normal;
  font-size: medium;
  font-style: normal;
  font-weight: 700;
  line-height: 1.6em;
  text-align: left;
  text-decoration-line: none;
  text-transform: none;
}

.emotion-0:disabled,
.emotion-0.inactive {
  border-color: rgb(165, 165, 165);
  background-color: rgb(191, 191, 191);
  color: rgb(1, 1, 1);
}

.emotion-0:not(:disabled):not(.inactive):hover,
.emotion-0:not(:disabled):not(.inactive).hover {
  border-color: rgb(224, 224, 224);
  background-color: rgb(247, 247, 247);
  color: rgb(1, 1, 1);
}

.emotion-0:not(:disabled):not(.inactive):active,
.emotion-0:not(:disabled):not(.inactive).active {
  border-color: rgb(224, 224, 224);
  background-color: rgb(240, 240, 240);
  color: rgb(1, 1, 1);
}

.emotion-0:not(:disabled):not(.inactive):focus,
.emotion-0:not(:disabled):not(.inactive).focus {
  outline-style: dotted;
  outline-color: inherit;
  outline-width: 1px;
  outline-offset: 1px;
}

<div>
  <button
    class="emotion-0"
  >
    example
  </button>
</div>
`;

exports[`Button should support trait props 1`] = `
.emotion-0 {
  display: inline-block;
  border-color: rgb(204, 136, 0);
  background-color: rgb(255, 170, 0);
  color: rgb(1, 1, 1);
  border-top-width: 12px;
  border-top-style: solid;
  border-right-width: 12px;
  border-right-style: solid;
  border-bottom-width: 12px;
  border-bottom-style: solid;
  border-left-width: 12px;
  border-left-style: solid;
  cursor: pointer;
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
  padding-left: 16px;
  border-top-left-radius: 24px;
  border-top-right-radius: 24px;
  border-bottom-left-radius: 24px;
  border-bottom-right-radius: 24px;
  font-family: Helvetica,sans-serif;
  font-kerning: normal;
  font-size: medium;
  font-style: italic;
  font-weight: 400;
  line-height: 1.6em;
  text-align: left;
  text-decoration-line: none;
  text-transform: none;
}

.emotion-0:disabled,
.emotion-0.inactive {
  border-color: rgb(165, 140, 89);
  background-color: rgb(191, 149, 64);
  color: rgb(1, 1, 1);
}

.emotion-0:not(:disabled):not(.inactive):hover,
.emotion-0:not(:disabled):not(.inactive).hover {
  border-color: rgb(255, 170, 0);
  background-color: rgb(204, 136, 0);
  color: rgb(1, 1, 1);
}

.emotion-0:not(:disabled):not(.inactive):active,
.emotion-0:not(:disabled):not(.inactive).active {
  border-color: rgb(204, 136, 0);
  background-color: rgb(135, 90, 0);
  color: rgb(255, 255, 255);
}

.emotion-0:not(:disabled):not(.inactive):focus,
.emotion-0:not(:disabled):not(.inactive).focus {
  outline-style: dotted;
  outline-color: inherit;
  outline-width: 1px;
  outline-offset: 1px;
}

<div>
  <button
    class="emotion-0"
    color="primary"
    radius="[object Object]"
  >
    example
  </button>
</div>
`;
